--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: badges
         directory: badges
+        force: true
 
     - name: Badge image URL
       id: url
