--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       run: echo "##[set-ouput name=install;]${{steps.install.outcome}}"
 
     - name: Upload artifacts
-    - uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v3
       with:
         name: build-configured
         path: ${{github.workspace}}/build
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Download artifacts
-      - uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v3
         with:
           name: build-configured
 
@@ -69,7 +69,7 @@ jobs:
         run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
       - name: Upload artifacts
-      - uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: built
           path: ${{github.workspace}}/build
@@ -81,7 +81,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Download artifacts
-      - uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v3
         with:
           name: built
 
@@ -89,7 +89,7 @@ jobs:
         run: sudo cmake --install ${{github.workspace}}/build
 
       - name: Upload artifacts
-      - uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: installed
           path: /usr/local/easena
@@ -101,12 +101,12 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Download artifacts
-      - uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v3
         with:
           name: installed
 
       - name: Installing CUDA toolkit
-      - uses: Jimver/cuda-toolkit@v0.2.7
+        uses: Jimver/cuda-toolkit@v0.2.7
         with:
           cuda: '11.7.0'
 
