--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
   configure:
     runs-on: ubuntu-latest
     name: Configure Easea
+    needs: [pre-ci]
 
     steps:
     - uses: actions/checkout@v3
@@ -56,6 +57,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build Easea
+    needs: [configure]
+
     steps:
       - uses: actions/checkout@v3
 
@@ -77,6 +80,8 @@ jobs:
   install:
     runs-on: ubuntu-latest
     name: Installing Easea
+    needs: [build]
+
     steps:
       - uses: actions/checkout@v3
 
@@ -97,6 +102,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     name: Testing Easea
+    needs: [install]
+
     steps:
       - uses: actions/checkout@v3
 
