--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,8 +137,9 @@ jobs:
       - name: Output examples status
         run: |
           cat examples.output
-          NBE=$(cat examples.output | sed -n 's/passed:[^[:digit:]]*\([[:digit:]]\+\)[^[:digit:]]*\([[:digit:]]\+\)/\2/p')
-          PASSED=$(cat examples.output | sed -n 's/passed:[^[:digit:]]*\([[:digit:]]\+\)[^[:digit:]]*\([[:digit:]]\+\)/\1/p')
+          LINE=$(cat examples.output | sed -n 's/passed://p')
+          NBE=$(echo ${LINE} | sed -n 's/[^[:digit:]]*\([[:digit:]]\+\)[^[:digit:]]\+\([[:digit:]]\+\)/\2/p')
+          PASSED=$(echo ${LINE} | sed -n 's/[^[:digit:]]*\([[:digit:]]\+\)[^[:digit:]]\+\([[:digit:]]\+\)/\1/p')
           echo "##[set-ouput name=nb_examples;]${NBE}"
           echo "##[set-ouput name=passed;]${PASSED}"
 
