--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,8 +138,8 @@ jobs:
         run: |
           cat examples.output
           LINE=$(cat examples.output | sed -n 's/passed://p')
-          NBE=$(echo ${LINE} | sed -n 's/[^[:digit:]]*\([[:digit:]]\+\)[^[:digit:]]\+\([[:digit:]]\+\)/\2/p')
-          PASSED=$(echo ${LINE} | sed -n 's/[^[:digit:]]*\([[:digit:]]\+\)[^[:digit:]]\+\([[:digit:]]\+\)/\1/p')
+          NBE=$(echo ${LINE} | sed -n 's/^\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*\([^[:digit:]]*\)*\([[:digit:]]\+\)\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*[^[:digit:]]*\([[:digit:]]\+\)/\9/p' | xxd)
+          PASSED=$(echo ${LINE} | sed -n 's/^\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*\([^[:digit:]]*\)*\([[:digit:]]\+\)\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*[^[:digit:]]*\([[:digit:]]\+\)/\5/p')
           echo "##[set-ouput name=nb_examples;]${NBE}"
           echo "##[set-ouput name=passed;]${PASSED}"
 
