--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,9 +137,9 @@ jobs:
       - name: Output examples status
         run: |
           cat examples.output
-          LINE=$(cat examples.output | sed -n 's/passed://p')
-          NBE=$(echo ${LINE} | sed -n 's/^\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*\([^[:digit:]]*\)*\([[:digit:]]\+\)\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*[^[:digit:]]*\([[:digit:]]\+\)/\9/p')
-          PASSED=$(echo ${LINE} | sed -n 's/^\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*\([^[:digit:]]*\)*\([[:digit:]]\+\)\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*[^[:digit:]]*\([[:digit:]]\+\)/\5/p')
+          LINE=$(cat examples.output | sed -n 's/passed://p' | sed -n 's/\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*//pg')
+          NBE=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\2/p')
+          PASSED=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\1/p')
           echo "##[set-ouput name=nb_examples;]${NBE}"
           echo "##[set-ouput name=passed;]${PASSED}"
 
