--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,9 +131,9 @@ jobs:
     name: Test Easea
     needs: [install]
     outputs:
+      total: ${{ steps.status.outputs.total }}
       passed: ${{ steps.status.outputs.passed }}
       failed: ${{ steps.status.outputs.failed }}
-      total: ${{ steps.status.outputs.total }}
 
     steps:
       - uses: actions/checkout@v3
@@ -185,7 +185,7 @@ jobs:
           ref: badges
 
       - run: mkdir -p badges
-      - run: echo ${{ needs.configure.outputs.status }}  ${{ needs.build.outputs.status }} ${{ needs.install.outputs.status }} ${{ needs.test.outputs.passed }} ${{ needs.test.outputs.total }} ${{ needs.test.outputs.failed }}
+      - run: echo ${{ needs.configure.outputs.status }}  ${{ needs.build.outputs.status }} ${{ needs.install.outputs.status }} ${{ needs.test.outputs }}
 
       - name: Generate configure badge
         uses: emibcn/badge-action@v1
