--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,7 +166,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: examples
-          path: ${{github.workspace}}
+          path: ${{github.workspace}}/examples.output
 
   badges:
     runs-on: ubuntu-latest
@@ -210,7 +210,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: examples
-          path: ${{github.workspace}}/examples.output
+          path: ${{github.workspace}}/
 
       - name: Parsing examples output
         id: examples
