--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,12 +161,17 @@ jobs:
           result_code=${PIPESTATUS[0]}
           exit $result_code
 
-      - name: Uploading artifacts
+      - name: Output examples status
+        id: status
         if: ${{ always() }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: examples
-          path: ${{github.workspace}}/examples.output
+        run: |
+          LINE=$(cat examples.output | sed -n 's/passed://p' | sed -n 's/\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*//pg')
+          NBE=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\2/p')
+          PASSED=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\1/p')
+          FAILED=$((NBE - PASSED))
+          echo "::set-output name=total::${NBE}"
+          echo "::set-output name=passed::${PASSED}"
+          echo "::set-output name=failed::${FAILED}"
 
   badges:
     runs-on: ubuntu-latest
@@ -180,7 +185,7 @@ jobs:
           ref: badges
 
       - run: mkdir -p badges
-      - run: echo ${{ needs.configure.outputs.status }}  ${{ needs.build.outputs.status }} ${{ needs.install.outputs.status }} ${{ needs.test.outputs }}
+      - run: echo ${{ needs.configure.outputs.status }}  ${{ needs.build.outputs.status }} ${{ needs.install.outputs.status }} ${{ needs.test.outputs
 
       - name: Generate configure badge
         uses: emibcn/badge-action@v1
@@ -206,28 +211,9 @@ jobs:
           color: ${{ needs.install.outputs.status == 'success' && 'green' || 'red' }}
           path: badges/install.svg
 
-      - name: Downloading examples output
-        uses: actions/download-artifact@v3
-        with:
-          name: examples
-          path: ${{github.workspace}}/
-
-      - name: Parsing examples output
-        id: examples
-        run: |
-          LINE=$(cat examples.output | sed -n 's/passed://p' | sed -n 's/\(.\[[[:digit:]]\+\)*\(;[[:digit:]]\+\)*\(m\)*//pg')
-          NBE=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\2/p')
-          PASSED=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\1/p')
-          FAILED=$((NBE - PASSED))
-          echo "::set-ouput name=total::${NBE}"
-          #echo "::set-ouput name=passed::${PASSED}"
-          #echo "::set-ouput name=failed::${FAILED}"
-
-      - run: echo ${{ join(steps.examples.outputs.*, '\n') }}
-
       - name: Generate test badge if all failed
         uses: emibcn/badge-action@v1
-        if: ${{ steps.examples.outputs.total == '' }}
+        if: ${{ needs.test.outputs.total == '' }}
         with:
           label: 'test'
           status: 'ERROR'
@@ -236,13 +222,13 @@ jobs:
 
       - name: Generate test badge if run
         uses: emibcn/badge-action@v1
-        if: ${{ steps.examples.outputs.total != '' }}
+        if: ${{ needs.test.outputs.total != '' }}
         with:
           label: 'test'
-          status: ${{ steps.examples.outputs.passed }} '/' ${{ steps.examples.outputs.total }}
-          color: ${{ steps.examples.outputs.failed == '0' && 'green' ||
-                    steps.examples.outputs.failed >= 1 && steps.examples.outputs.failed <= 3 && 'yellow' ||
-                    steps.examples.outputs.failed >= 3 && steps.examples.outputs.failed <= 6 && 'orange' ||
+          status: ${{ needs.test.outputs.passed }} '/' ${{ needs.test.outputs.total }}
+          color: ${{ needs.test.outputs.failed == '0' && 'green' ||
+                    needs.test.outputs.failed >= 1 && needs.test.outputs.failed <= 3 && 'yellow' ||
+                    needs.test.outputs.failed >= 3 && needs.test.outputs.failed <= 6 && 'orange' ||
                     'red' }}
           path: badges/test.svg
 
