--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,14 +224,13 @@ jobs:
         uses: emibcn/badge-action@v1
         if: ${{ needs.test.outputs.total != '' }}
         with:
-          label: 'test'
-          status: ${{ needs.test.outputs.passed }} '/' ${{ needs.test.outputs.total }}
+          label: 'Working examples'
+          status: ${{ needs.test.outputs.passed }}/${{ needs.test.outputs.total }}
           color: ${{ needs.test.outputs.failed == '0' && 'green' ||
                     needs.test.outputs.failed >= 1 && needs.test.outputs.failed <= 3 && 'yellow' ||
                     needs.test.outputs.failed >= 3 && needs.test.outputs.failed <= 6 && 'orange' ||
                     'red' }}
           path: badges/test.svg
-
 
       - name: Commit badge
         env:
