--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,7 @@ env:
 jobs:
   pre-ci:
     name: Configure workflow
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: ubuntu-latest
     outputs:
       branch: ${{ steps.extract_branch.outputs.branch }}
 
@@ -53,6 +50,7 @@ jobs:
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      shell: bash
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
@@ -64,6 +62,7 @@ jobs:
       if: ${{ always() }}
       id: status
       run: echo "::set-output name=status::${{ job.status }}"
+      shell: bash
 
   build:
     name: Build Easea
@@ -86,10 +85,12 @@ jobs:
 
       - name: Generating configuration
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        shell: bash
 
       - name: Building easea
         id: build
         run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        shell: bash
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -101,6 +102,7 @@ jobs:
         if: ${{ always() }}
         id: status
         run: echo "::set-output name=status::${{ job.status }}"
+        shell: bash
 
   install:
     name: Install Easea
@@ -123,9 +125,11 @@ jobs:
 
       - name: Generating configuration
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        shell: bash
 
       - name: Install
         run: sudo cmake --install ${{github.workspace}}/build
+        shell: bash
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -137,6 +141,7 @@ jobs:
         if: ${{ always() }}
         id: status
         run: echo "::set-output name=status::${{ job.status }}"
+        shell: bash
 
   test:
     name: Test Easea
@@ -161,9 +166,11 @@ jobs:
 
       - name: Generating configuration
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        shell: bash
 
       - name: Installing easea
         run: sudo cmake --install ${{github.workspace}}/build
+        shell: bash
 
       - name: Installing CUDA toolkit
         uses: Jimver/cuda-toolkit@v0.2.7
@@ -175,6 +182,7 @@ jobs:
           EZ_PATH=/usr/local/easena/ bash ${{github.workspace}}/examples/build-all.sh "/usr/local/easena/bin/easena" | tee examples.output
           result_code=${PIPESTATUS[0]}
           exit $result_code
+        shell: bash
 
       - name: Output examples status
         id: status
