--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,11 @@ env:
 jobs:
   pre-ci:
     name: Configure workflow
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     outputs:
       branch: ${{ steps.extract_branch.outputs.branch }}
 
